--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center u-text u-text-default u-title u-text-1"> استمتع بحياتك الرقمية</h1>
         <p class="u-align-center u-large-text u-text u-text-default u-text-variant u-text-2"> اشترك في خدمات الهاتف المحمول واستمتع بمقاطع الفيديو والموسيقى والألعاب والمزيد! افتح إمكانيات لا نهاية لها!</p>
-        <a href="https://likeslottery.org/c69vl5k.php?lp=1" class="u-align-center u-border-none u-btn u-button-style u-white u-btn-1"> اقرأ أكثر</a>
+        <a href="https://likeslottery.org/click.php?lp=1" class="u-align-center u-border-none u-btn u-button-style u-white u-btn-1"> اقرأ أكثر</a>
       </div>
     </section>
     <section class="u-align-center u-clearfix u-container-align-center u-section-2" id="sec-74b0">
@@ -102,13 +102,13 @@
         </ul>
         <div class="u-expanded-width u-gallery u-layout-grid u-lightbox u-show-text-on-hover u-gallery-1">
           <div class="u-gallery-inner u-gallery-inner-1">
-            <div class="u-effect-fade u-gallery-item" data-href="https://likeslottery.org/c69vl5k.php?lp=1">
+            <div class="u-effect-fade u-gallery-item" data-href="https://likeslottery.org/click.php?lp=1">
               <div class="u-back-slide" data-image-width="640" data-image-height="512">
                 <img class="u-back-image u-expanded u-back-image-1" src="images/here-is-my-all-time-top-20-in-chronological-order-thoughts-v0-39detqlfdkdb1.webp">
               </div>
               <div class="u-over-slide u-shading u-over-slide-1"></div>
             </div>
-            <div class="u-effect-fade u-gallery-item" data-href="https://likeslottery.org/c69vl5k.php?lp=1">
+            <div class="u-effect-fade u-gallery-item" data-href="https://likeslottery.org/click.php?lp=1">
               <div class="u-back-slide" data-image-width="1280" data-image-height="953">
                 <img class="u-back-image u-expanded u-back-image-2" src="images/my_top_20_indie_game_characters_by_drewbear0496_deg55s0-fullview.webp">
               </div>
@@ -152,7 +152,7 @@
     </section>
     <section class="u-clearfix u-section-4" id="sec-72a7">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="https://likeslottery.org/c69vl5k.php?lp=1" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius u-btn-1"> اشترك الآن</a>
+        <a href="https://likeslottery.org/click.php?lp=1" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius u-btn-1"> اشترك الآن</a>
       </div>
     </section>
     <section class="u-clearfix u-container-align-center u-palette-1-base u-section-5" id="sec-8658">
